# open_book

./: Cargo.toml
assets/: app.css  app.html  app.js
src/: db.rs  main.rs
