[package]
name = "open_book"
version = "0.1.0"
authors = ["Tilman Roeder <dyed.green.info@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.21.0", features = ["bundled"] }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
